fix: logo and header layout issues

--- a/packages/ui-react/src/components/Header/Header.module.scss
+++ b/packages/ui-react/src/components/Header/Header.module.scss
@@ -226,11 +226,14 @@
   }
 
   .brand {
+    margin-right: 0;
+    margin-left: 0;
     text-align: center;
   }
 
   .menu,
   .actions {
+    justify-content: flex-end;
     width: 80px;
   }
 }
